[project]
name = "hagepta-reimbursement-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
    "streamlit >= 1.35.0",
    "gspread == 5.12.4",
    "oauth2client == 4.1.3",
    "yagmail >= 0.15.293",
    "pandas == 2.2.2",
    "python-dotenv == 1.0.1",       
    "ruff >= 0.4.3",
    "google-api-python-client == 2.176.0"
]
